added bottom jumbotron and comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="main.js"></script>
 </head>
 <body>
+
+<!-- Top search section -->
 <div class="jumbotron">
     
     <div class="jumbotron jumbotron-fluid">
@@ -18,6 +20,14 @@
               <p class="lead"></p>
             </div>
           </div>
+</div>
+
+<!-- Bottom container for returned information -->
+<div class="jumbotron jumbotron-fluid infoReturn">
+  <div class="container">
+    <h1 class="display-4">Fluid jumbotron</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
 </div>
     
 </body>
