--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
             </div>
           </div>
 </div>
+<form>
+        <div class="form-group">
+          <label for="Title">Title</label>
+          <input class="form-control" type="text" placeholder="Title">
+        </div>
+        <div class="form-group">
+                <label for="exampleFormControlSelect1">Sort By Relevance</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>newest</option>
+                  <option>oldest</option>
+                </select>
+              </div>
+        <div class="form-group">
+                <label for="exampleInputEmail1">Title</label>
+                <input class="form-control" type="text" placeholder="Default input">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
     
 </body>
 </html>
