--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
@@ -24,11 +23,22 @@
 </div>
 
 <!-- Bottom container for returned information -->
-<div class="jumbotron jumbotron-fluid infoReturn">
-  <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+<div id="container">
+<div class="row">
+  <div class="col-lg-2"></div>
+<div class="col-lg-8">
+<div class="card">
+    <div class="card-header">
+      Top Articles
+    </div>
+    <div class="card-body">
+      <ol id="returnedArticles">
+
+      </ol>
+    </div>
   </div>
+</div>
+</div>
 </div>
     
 </body>
