--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <form>
         <div class="form-group">
           <label for="Title">Title</label>
-          <input class="form-control" type="text" placeholder="Title">
+          <input class="form-control" type="text" placeholder="Title" id="title">
         </div>
               <div class="form-group">
                     <label for="exampleFormControlSelect1">Number of Records to Retrieve</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <select class="form-control" id="retrievenumber">
                       <option>1</option>
                       <option>2</option>
                       <option>3</option>
@@ -49,11 +49,11 @@
                   </div>
             <div class="form-group">
                   <label for="Title">Start Year</label>
-                  <input class="form-control" type="text" placeholder="YYYYMMDD">
+                  <input class="form-control" type="text" placeholder="YYYYMMDD" id="startyear">
                 </div>
         <div class="form-group">
                 <label for="exampleInputEmail1">End Year</label>
-                <input class="form-control" type="text" placeholder="YYYYMMDD">
+                <input class="form-control" type="text" placeholder="YYYYMMDD" id="endyear">
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
         <button class="btn btn-danger" type="reset">Clear</button>
