--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="row">
   <div class="col-lg-2"></div>
 <div class="col-lg-8">
-<div class="card">
+<div class="card" id="results">
     <div class="card-header">
       Top Articles
     </div>
